copy right notes

--- a/index.html
+++ b/index.html
@@ -165,7 +165,11 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0&appId=212185166870766&autoLogAppEvents=1" nonce="YcTJ7q7h"></script>
 
 
-
+<!--
+ Copyright Disclaimer :
+Copyright © HTV USA, 2020 
+All rights reserved. No part of this video may be reproduced or used in any manner without the written permission of the copyright owner except for the use of quotations in a review or commentary.
+-->
 </body>
 
 </html>
